Fix the alignment for the hero section contents

--- a/style.css
+++ b/style.css
@@ -323,6 +323,8 @@ ul {
     max-width: 100%;
     display: flex;
     flex: 1;
+    justify-content: center;
+    align-items: center;
 }
 
 .slider__item {
@@ -330,6 +332,7 @@ ul {
     padding-right: 56px;
     display: flex !important;
     justify-content: center;
+    align-items: center;
 
     @media only screen and (max-width: 1440px) {
         padding-left: var(--space-4xl);
